--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,21 @@
+sudo: required
+language: generic
 services:
   - docker
-
+before_install:
+  - echo -n "exports.version = '$(git rev-parse HEAD)';" > code_version.js
+  - echo ${DOCKER_COMPOSE_VERSION}
+  - sudo rm /usr/local/bin/docker-compose
+  - sudo curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
+script:
+  - docker-compose build
+after_success:
+  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASSWORD
+  - export REPO=cwac/hubot-slack-localz
+  - export TAG=${TRAVIS_BRANCH//'/'/-}
+  - docker build -f Dockerfile -t $REPO:$COMMIT .
+  - docker tag $REPO:$COMMIT $REPO:$TAG
+after_script:
+  - sh ecs-deploy.sh -c default -n hubot -i cwac/hubot-slack-localz --region eu-west-1
