--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ after_success:
   - docker build -f Dockerfile -t $REPO:$COMMIT .
   - docker tag $REPO:$COMMIT $REPO:$TAG
 after_script:
-  - sh ecs-deploy.sh -c default -n hubot -i cwac/hubot-slack-localz --region eu-west-1
+  - chmod +x ecs-deploy.sh
+  - ./ecs-deploy.sh -c default -n hubot -i cwac/hubot-slack-localz --region eu-west-1
